GDB-14120 fixed condition for cookie consent banner rendering. The banner must be visible always when free access is enabled or the user is logged in, tracking is allowed and the policy is not yet accepted.
Try cleaning the security status in beforeEach instead of afterEach assuming that its technically possible for test spec to fail in a way so the afterEach hook to not be triggered

Renamed cookie service to tracking service because this is its purpose.
Also changed the logic for the banner visibility.

Handle cookie policy update in the new tracking service

Migrate user tracking functionality including cookie service, tracking cookie, google tag and installation services and related models.
Integration with the current cookie consent banner component.

Improve logic for cookie consent banner rendering and persistence.

Decouple legacy workbench from old cookie policy modal directive in favor of the new shared component.

Add tests for the TrackingStorageService
Add tests for the TrackingService
Add tests for the CookieBuilder

Add tests for the CookieService

Add/remove google scripts and cookies when toggling options in the cookie policy or accepting it.

Fixing sonar issues

make cookie path property mandatory

Fix an issue where rapid disabling/enabling of cookie options might lead to incorrectly added google tag scripts

Renamed variable for better readability.
Removed redundant AuthenticatedUser instance creation in the tracking service.
Fixed issue with the cypress test for the cookie policy where the test failed because we added debounce when the policy options are toggled to prevent abuse.

Remove redundant logical branch when accepting cookie policy because the cookie consent object is actually always returned and the branch was not needed.

(cherry picked from commit ddd7cdd84790a3a02b5452614a6feec736cf6f26)

--- a/packages/shared-components/src/components/onto-cookie-consent/onto-cookie-consent.scss
+++ b/packages/shared-components/src/components/onto-cookie-consent/onto-cookie-consent.scss
@@ -1,4 +1,4 @@
-.cookie-consent-modal {
+.cookie-consent-banner {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -8,15 +8,15 @@
   padding: 20px;
   z-index: 1050;
   width: 100%;
-}
 
-.cookie-consent-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  .cookie-consent-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  & button {
-    margin-left: 12px;
+    & button {
+      margin-left: 12px;
+    }
   }
 }
 
